<resources>
    <string name="app_name">Play Store</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="category_label">Top categories</string>
    <string name="all_categories">All categories</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Kunal Das</string>
    <string name="nav_header_subtitle">kunal.das@mountblue.io</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>

    <string name="menu_my_apps_and_games">My apps and games</string>
    <string name="menu_notifications">Notifications</string>
    <string name="menu_subscriptions">Subscriptions</string>
    <string name="menu_wish_list">Wish List</string>
    <string name="menu_account">Account</string>
    <string name="menu_payment_methods">Payment Methods</string>
    <string name="menu_play_protect">Play Protect</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_redeem">Redeem</string>
    <string name="menu_help_and_feedback">Help and Feedback</string>
    <string name="menu_parent_guide">Parent guide</string>
    <string name="menu_about_google_play">About Google Play</string>


    <string name="games">GAMES</string>
    <string name="apps">APPS</string>
    <string name="movies">MOVIES</string>
    <string name="books">BOOKS</string>
    <string name="music">MUSIC</string>
    <string name="test">Test</string>
    <string name="app_icon_card">App Icon</string>
    <string name="topFree">TOP FREE</string>
    <string name="topGrossing">TOP GROSSING</string>
    <string name="trending">TRENDING</string>
    <string name="topPaid">TOP PAID</string>
    <string name="show_all">SHOW ALL</string>
    <string name="family_categories">Family categories</string>
    <string name="action_search">Search</string>
    <string name="title_activity_installed_app_list">InstalledAppListActivity</string>

    <string name="title_activity_screenshot">ScreenshotActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>


    <string name="all_reviews">All Reviews</string>
    <string name="five">5</string>
    <string name="string_four">4</string>
    <string name="string_three">3</string>
    <string name="string_two">2</string>
    <string name="string_one">1</string>
    <string name="share_application">Share Application</string>
    <string name="no_application_available">No application available to handle request</string>
    <string name="_404_not_found">404 not found</string>
    <string name="sub_text">You can sign up for subscriptions in your favorite apps and games and manage them in Google Play</string>
</resources>
