<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group
        android:id="@+id/group_one"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_my_apps_and_games"
            android:title="@string/menu_my_apps_and_games" />
        <item
            android:id="@+id/nav_notifications"
            android:title="@string/menu_notifications" />
        <item
            android:id="@+id/nav_subscriptions"
            android:title="@string/menu_subscriptions" />
        <item
            android:id="@+id/nav_wish_lisy"
            android:title="@string/menu_wish_list" />
    </group>

    <group
        android:id="@+id/group_two"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_account"
            android:title="@string/menu_account" />
        <item
            android:id="@+id/nav_payment_methods"
            android:title="@string/menu_payment_methods" />
        <item
            android:id="@+id/nav_play_protect"
            android:title="@string/menu_play_protect" />
        <item
            android:id="@+id/nav_settings"
            android:title="@string/menu_settings" />
    </group>

    <group
        android:id="@+id/group_three"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_redeem"
            android:title="@string/menu_redeem" />
        <item
            android:id="@+id/nav_help_and_feedback"
            android:title="@string/menu_help_and_feedback" />
        <item
            android:id="@+id/nav_parent_guide"
            android:title="@string/menu_parent_guide" />
        <item
            android:id="@+id/nav_about_google_play"
            android:title="@string/menu_about_google_play" />
    </group>

</menu>
