<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingStart="8dp"
    android:paddingEnd="8dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="8dp"
        android:paddingTop="16dp"
        android:paddingEnd="8dp"
        android:paddingBottom="16dp"
        android:text="Ratings and reviews"
        android:textColor="@color/blackColor"
        android:textSize="16sp"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/histogram"
        android:background="?android:attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingStart="16dp"
        android:paddingEnd="16dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:orientation="vertical">

            <TextView
                android:id="@+id/score_review"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:paddingStart="16dp"
                android:paddingTop="4dp"
                android:paddingEnd="16dp"
                android:paddingBottom="4dp"
                android:textColor="@color/blackColor"
                android:textSize="56sp"
                tools:text="4.5 " />

            <RatingBar
                android:id="@+id/rating_review"
                style="@style/Widget.AppCompat.RatingBar.Small"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:progressTint="@color/colorPrimary"
                tools:rating="4.5" />

            <TextView
                android:id="@+id/total_reviews"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:textSize="12sp"
                tools:text="84951607" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:orientation="vertical"
            android:paddingStart="16dp"
            android:paddingEnd="16dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/five"
                    android:textSize="12sp" />

                <ProgressBar
                    android:id="@+id/five_stars"
                    style="?android:attr/progressBarStyleHorizontal"
                    android:layout_width="match_parent"
                    android:layout_height="10dp"
                    android:layout_margin="5dp"
                    android:indeterminate="false"
                    android:maxHeight="10dip"
                    android:minHeight="10dip"
                    tools:progress="50"
                    android:progressDrawable="@drawable/greenprogress" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/string_four"
                    android:textSize="12sp" />

                <ProgressBar
                    android:id="@+id/four_stars"
                    style="?android:attr/progressBarStyleHorizontal"
                    android:layout_width="match_parent"
                    android:layout_height="10dp"
                    android:layout_margin="5dp"
                    android:indeterminate="false"
                    android:maxHeight="10dip"
                    android:minHeight="10dip"
                    tools:progress="50"
                    android:progressDrawable="@drawable/greenprogress" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/string_three"
                    android:textSize="12sp" />

                <ProgressBar
                    android:id="@+id/three_stars"
                    style="?android:attr/progressBarStyleHorizontal"
                    android:layout_width="match_parent"
                    android:layout_height="10dp"
                    android:layout_margin="5dp"
                    android:indeterminate="false"
                    android:maxHeight="10dip"
                    android:minHeight="10dip"
                    tools:progress="50"
                    android:progressDrawable="@drawable/greenprogress" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/string_two"
                    android:textSize="12sp" />

                <ProgressBar
                    android:id="@+id/two_stars"
                    style="?android:attr/progressBarStyleHorizontal"
                    android:layout_width="match_parent"
                    android:layout_height="10dp"
                    android:layout_margin="5dp"
                    android:indeterminate="false"
                    android:maxHeight="10dip"
                    android:minHeight="10dip"
                    tools:progress="50"
                    android:progressDrawable="@drawable/greenprogress" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/string_one"
                    android:textSize="12sp" />

                <ProgressBar
                    android:id="@+id/one_star"
                    style="?android:attr/progressBarStyleHorizontal"
                    android:layout_width="match_parent"
                    android:layout_height="10dp"
                    android:layout_margin="5dp"
                    android:indeterminate="false"
                    android:maxHeight="10dip"
                    android:minHeight="10dip"
                    tools:progress="50"
                    android:progressDrawable="@drawable/greenprogress" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_margin="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/review_border"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:text="Top Reviews"
            android:textColor="@color/black"
            android:textSize="12sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorHistogram" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/reviews_recycler"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:id="@+id/show_reviews"
        android:background="?android:attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        android:textAlignment="center"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        android:text="See all reviews"
        android:textColor="@color/primaryColor"
        android:textStyle="bold" />

</LinearLayout>